--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
 
         "DB_CONNECTION": "mysql",
         "DB_HOST": "localhost",
-        "DB_PORT": 3306,
+        "DB_PORT": "3306",
         "DB_DATABASE": "absensi",
         "DB_USERNAME": "root",
         "DB_PASSWORD": "",
