--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-<IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
+# <IfModule mod_rewrite.c>
+    # <IfModule mod_negotiation.c>
+    #     Options -MultiViews -Indexes
+    # </IfModule>
 
     RewriteEngine On
     RewriteCond %{REQUEST_URI} !^/public/
@@ -20,4 +20,4 @@
     # RewriteCond %{REQUEST_FILENAME} !-d
     # RewriteCond %{REQUEST_FILENAME} !-f
     # RewriteRule ^ index.php [L]
-</IfModule>
+# </IfModule>
