--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     "routes": [{
         "src": "/(.*)",
-        "dest": "/public"
+        "dest": "/public/index.php"
     }],
     "env": {
         "APP_ENV": "production",
