--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,14 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.5.5" }
     },
+    "builds": [
+    {
+      "src": "index.php",
+      "use": "@vercel/php"
+    }
+  ],
     "routes": [{
-        "src": "/public/(.*)",
+        "src": "/(.*)",
         "dest": "/api/index.php"
     }],
     "env": {
