--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,13 @@
         "src": "/(.*)",
         "dest": "/api/index.php"
     }],
+    "redirects": [
+        {
+            "source": "/(.*)",
+            "destination": "/public/$1",
+            "permanent": true
+        }
+    ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
