--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,12 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.5.5" }
     },
+    "rewrites": [
+        {
+        "source": "/api/:path*",
+        "destination": "/public/api/:path*"
+        }
+    ],
     "routes": [{
         "src": "/(.*)",
         "dest": "/api/index.php"
