--- a/vercel.json
+++ b/vercel.json
@@ -6,19 +6,6 @@
     },
     "routes": [{
         "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
-    "redirects": [
-        {
-        "source": "/",
-        "destination": "/public",
-        "permanent": true
-        }
-    ],
-    "rewrites": [
-        {
-        "source": "/(.*)",
-        "destination": "/public/$1"
-        }
-    ]
+        "dest": "/public/index.php"
+    }]
 }
