--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
       "framework": null,
     "functions": {
-        "index.php": { "runtime": "vercel-php@0.5.5" }
+        "/index.php": { "runtime": "vercel-php@0.5.5" }
     },
     "routes": [{
         "src": "/(.*)",
