--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "flipbox/lumen-generator": "^9.3",
         "laravel/lumen-framework": "^10.0",
         "maatwebsite/excel": "^3.1",
+        "palanik/lumen-cors": "dev-master",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
